src/test/deca/syntax/invalid/test_synt/control_structures/if_in_while.deca
// Description:
//    Test de while avec une condition addition
//    Les seules condition dans les print sont des boolenes mais 2+2 nest pas booleen
//
// Resultats:
//    Context: erreur line 12
//
// Historique:
//    cree le 14/01/2022

{
    while (if (true) {}) {
        
    }
}